--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "iview": "^3.4.2",
+    "moment": "^2.24.0",
+    "vue": "^2.6.10",
+    "vue-function-api": "^2.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.0",
+    "bootstrap-4-stylus": "^1.0.7",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "style-resources-loader": "^1.2.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
