--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
-    "vue-function-api": "^2.0.6"
+    "vue-function-api": "^2.0.6",
+    "vue-router": "^3.0.7",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
