--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "iview": "^3.4.2",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.24.0",
+    "sockjs": "^0.3.19",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-function-api": "^2.0.6",
     "vue-router": "^3.0.7",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
