--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
     "mockjs": "^1.0.1-beta3",
